# NotableUsageOfCpp

./: .clang-format  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  eigen_fmt.cpp  fmt_derived.cpp  range_remove.cpp  udt_fmt.cpp
src/bin_search/: CMakeLists.txt  bin_search.cpp
src/bitsery_demo/: Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  main.cpp
src/boost_ser/: Base.cpp  Base.h  BaseSerialization.cpp  CMakeLists.txt  Derived.cpp  Derived.h  DerivedSerialization.cpp  boost_ser.cpp
src/cereal_serialization/: Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  cereal_serialization.cpp  main.cpp
src/cereal_serialization/cereal_dll/cereal/: CMakeLists.txt  cereal.cpp
src/cereal_serialization/cereal_dll/cereal/details/: binding_map.hpp  loop_macros.hpp  polymorphic_impl.hpp  static_object.hpp
src/cereal_serialization/cereal_dll/cereal/types/: base_class.hpp  polymorphic.hpp
src/cereal_serialization_rttr/: Base.cpp  CMakeLists.txt  Derived.cpp  Derived.h
src/co_route/: CMakeLists.txt  CoObj.cpp  CoObj.h  co.cpp  co_gen.cpp  co_task.cpp  generator.hpp
src/ctad/: CMakeLists.txt  ClassTemplateArgumentDeduction.md  ctad_example.cpp
src/eigen_usage/: CMakeLists.txt  eigen_basis.cpp  eigen_map.cpp
src/embed_script/: CMakeLists.txt  README.md  chai.cpp  sol2_main.cpp
src/fmt_lib_usage/: CMakeLists.txt  fmt_derived.cpp  fmt_user_defined_type.cpp
src/gcode_parser/: CMakeLists.txt  gcode_parser.cpp  sample.gcode
src/modules/: CMakeLists.txt  hello.cpp
src/pfr_serialization/: CMakeLists.txt  pfr_serialization.cpp
src/pose_interpolation/: CMakeLists.txt  pose_interpolation.cpp
src/python/: calcuate_density.py  calculate_noise.py  open_file.py
src/qt_examples/: CMakeLists.txt  qthread_usage.cpp  worker.h
src/reflection/: CMakeLists.txt  main.cpp  reflection.cpp  reflection.h
src/stl_examples/: CMakeLists.txt  hash_table.cpp  range_remove.cpp  stl_expected.cpp  stl_fmt.cpp
src/zen_serialization/: Archive.h  Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  main.cpp
src/zpp_serialization/: CMakeLists.txt  zpp_bits.h  zpp_ser.cpp
src/zppbits_serialization/: Archive.cpp  Archive.h  Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  archive.h  basic_example.cpp  main.cpp
