find_package(spdlog CONFIG REQUIRED)
link_libraries(spdlog::spdlog)

# add_subdirectory(qt_examples)
# add_subdirectory(gcode_parser)
# add_subdirectory(pfr_serialization)
# add_subdirectory(ctad)
# add_subdirectory(zpp_serialization)
# add_subdirectory(co_route)
# add_subdirectory(bin_search)
# add_subdirectory(embed_script)
# add_subdirectory(pose_interpolation)
# add_subdirectory(eigen_usage)
# add_subdirectory(stl_examples)
add_subdirectory(cereal_serialization)
add_subdirectory(zppbits_serialization)
add_subdirectory(fmt_lib_usage)
add_subdirectory(reflection)
# add_subdirectory(modules)
