file(GLOB srcs CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
foreach(src ${srcs})
  cmake_path(GET src STEM exe_name)
  cmake_path(GET CMAKE_CURRENT_LIST_DIR STEM dir_name)
  set(target_name ${dir_name}-${exe_name})
  message(STATUS "Building: ${target_name} from: ${src}")
  add_executable(${target_name} ${src})
  target_link_libraries(${target_name} PRIVATE Eigen3::Eigen spdlog::spdlog fmt::fmt range-v3::range-v3)
endforeach()