include(GenerateExportHeader)

find_path(ZPP_BITS_INCLUDE_DIRS "zpp_bits.h")
include_directories(${ZPP_BITS_INCLUDE_DIRS})

add_library(zppbits_dummy_lib_base SHARED Base.cpp)
generate_export_header(zppbits_dummy_lib_base)

add_library(zppbits_dummy_lib_derived SHARED Derived.cpp)
generate_export_header(zppbits_dummy_lib_derived)
target_link_libraries(zppbits_dummy_lib_derived PUBLIC zppbits_dummy_lib_base)

add_executable(zppbits_serialization main.cpp)
target_link_libraries(zppbits_serialization PRIVATE zppbits_dummy_lib_derived)
